logs/stomp_moveit/build.make.028.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:298:40: error: invalid operands of types ‘Eigen::Index {aka long int}’ and ‘const char [7]’ to binary ‘operator<<’
   std::cout<<"cols: ",parameters.cols()<<"rows: "<<parameters.rows()<<"\n";
                       ~~~~~~~~~~~~~~~~~^~~~~~~~~~
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
